--- a/styles/_cover.scss
+++ b/styles/_cover.scss
@@ -7,6 +7,6 @@
     background-color: #333645;
     opacity: 0;
     transition: opacity 1s, left 0.5s, right 0.5s;
-    z-index: 99999;
+    z-index: 99;
     visibility: hidden;
   }
