--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -2,7 +2,7 @@
   width: 100%;
   position: absolute;
   top: 0;
-  z-index: 9999;
+  z-index: 50;
   background-color: #fff;
 
   &.can-animate {
