--- a/styles/_sidenav.scss
+++ b/styles/_sidenav.scss
@@ -242,4 +242,8 @@
     }
   }
 
+  @media (min-width: 992px) {
+    width: 350px;
+  }
+
 }
